--- a/public/Css/inventario.css
+++ b/public/Css/inventario.css
@@ -35,7 +35,7 @@
 }
 
 .table thead th {
-    background-color: #6191EF;
+    background-color: #146AF4;
     color: white;
     font-weight: 600;
     text-transform: uppercase;
