--- a/public/bootstrap/css/bootstrap.css
+++ b/public/bootstrap/css/bootstrap.css
@@ -7,7 +7,7 @@
  */
 :root,
 [data-bs-theme="light"] {
-    --bs-blue: #5197F7;
+    --bs-blue: #005BBC;
     --bs-indigo: #6610f2;
     --bs-purple: #6f42c1;
     --bs-pink: #d63384;
@@ -30,7 +30,7 @@
     --bs-gray-700: #495057;
     --bs-gray-800: #343a40;
     --bs-gray-900: #212529;
-    --bs-primary: #5197F7;
+    --bs-primary: #005BBC;
     --bs-secondary: #6c757d;
     --bs-success: #198754;
     --bs-info: #0dcaf0;
@@ -100,7 +100,7 @@
     --bs-tertiary-bg: #f8f9fa;
     --bs-tertiary-bg-rgb: 248, 249, 250;
     --bs-heading-color: inherit;
-    --bs-link-color: #5197F7;
+    --bs-link-color: #005BBC;
     --bs-link-color-rgb: 13, 110, 253;
     --bs-link-decoration: underline;
     --bs-link-hover-color: #0a58ca;
@@ -2241,13 +2241,13 @@ progress {
 
 .table-primary {
     --bs-table-color: #ffffff;
-    --bs-table-bg: #5197F7;
-    --bs-table-border-color: #5197F7;
-    --bs-table-striped-bg: #5197F7;
+    --bs-table-bg: #005BBC;
+    --bs-table-border-color: #005BBC;
+    --bs-table-striped-bg: #005BBC;
     --bs-table-striped-color: #000;
-    --bs-table-active-bg: #5197F7;
+    --bs-table-active-bg: #005BBC;
     --bs-table-active-color: #000;
-    --bs-table-hover-bg: #5197F7;
+    --bs-table-hover-bg: #005BBC;
     --bs-table-hover-color: #000;
     color: var(--bs-table-color);
     border-color: var(--bs-table-border-color);
@@ -2780,8 +2780,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input:checked {
-    background-color: #5197F7;
-    border-color: #5197F7;
+    background-color: #005BBC;
+    border-color: #005BBC;
 }
 
 .form-check-input:checked[type="checkbox"] {
@@ -2793,8 +2793,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input[type="checkbox"]:indeterminate {
-    background-color: #5197F7;
-    border-color: #5197F7;
+    background-color: #005BBC;
+    border-color: #005BBC;
     --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 
@@ -2903,7 +2903,7 @@ textarea.form-control-lg {
     margin-top: -0.25rem;
     -webkit-appearance: none;
     appearance: none;
-    background-color: #5197F7;
+    background-color: #005BBC;
     border: 0;
     border-radius: 1rem;
     -webkit-transition: background-color 0.15s ease-in-out,
@@ -2938,7 +2938,7 @@ textarea.form-control-lg {
     height: 1rem;
     -moz-appearance: none;
     appearance: none;
-    background-color: #5197F7;
+    background-color: #005BBC;
     border: 0;
     border-radius: 1rem;
     -moz-transition: background-color 0.15s ease-in-out,
@@ -3528,19 +3528,19 @@ fieldset:disabled .btn {
 
 .btn-primary {
     --bs-btn-color: #fff;
-    --bs-btn-bg: #7CB3FF;
-    --bs-btn-border-color: #5197F7;
+    --bs-btn-bg: #146AF4;
+    --bs-btn-border-color: #005BBC;
     --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #5197F7;
-    --bs-btn-hover-border-color: #5197F7;
+    --bs-btn-hover-bg: #005BBC;
+    --bs-btn-hover-border-color: #005BBC;
     --bs-btn-focus-shadow-rgb: 49, 132, 253;
     --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #5197F7;
-    --bs-btn-active-border-color: #5197F7;
+    --bs-btn-active-bg: #005BBC;
+    --bs-btn-active-border-color: #005BBC;
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     --bs-btn-disabled-color: #fff;
-    --bs-btn-disabled-bg: #5197F7;
-    --bs-btn-disabled-border-color: #5197F7;
+    --bs-btn-disabled-bg: #005BBC;
+    --bs-btn-disabled-border-color: #005BBC;
 }
 
 .btn-secondary {
@@ -3663,19 +3663,19 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-primary {
-    --bs-btn-color: #5197F7;
-    --bs-btn-border-color: #5197F7;
+    --bs-btn-color: #005BBC;
+    --bs-btn-border-color: #005BBC;
     --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #5197F7;
-    --bs-btn-hover-border-color: #5197F7;
+    --bs-btn-hover-bg: #005BBC;
+    --bs-btn-hover-border-color: #005BBC;
     --bs-btn-focus-shadow-rgb: 13, 110, 253;
     --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #5197F7;
-    --bs-btn-active-border-color: #5197F7;
+    --bs-btn-active-bg: #005BBC;
+    --bs-btn-active-border-color: #005BBC;
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    --bs-btn-disabled-color: #5197F7;
+    --bs-btn-disabled-color: #005BBC;
     --bs-btn-disabled-bg: transparent;
-    --bs-btn-disabled-border-color: #5197F7;
+    --bs-btn-disabled-border-color: #005BBC;
     --bs-gradient: none;
 }
 
@@ -3928,7 +3928,7 @@ fieldset:disabled .btn {
     --bs-dropdown-link-hover-color: var(--bs-body-color);
     --bs-dropdown-link-hover-bg: var(--bs-tertiary-bg);
     --bs-dropdown-link-active-color: #fff;
-    --bs-dropdown-link-active-bg: #5197F7;
+    --bs-dropdown-link-active-bg: #005BBC;
     --bs-dropdown-link-disabled-color: var(--bs-tertiary-color);
     --bs-dropdown-item-padding-x: 1rem;
     --bs-dropdown-item-padding-y: 0.25rem;
@@ -4233,7 +4233,7 @@ fieldset:disabled .btn {
     --bs-dropdown-divider-bg: var(--bs-border-color-translucent);
     --bs-dropdown-link-hover-bg: rgba(255, 255, 255, 0.15);
     --bs-dropdown-link-active-color: #fff;
-    --bs-dropdown-link-active-bg: #5197F7;
+    --bs-dropdown-link-active-bg: #005BBC;
     --bs-dropdown-link-disabled-color: #adb5bd;
     --bs-dropdown-header-color: #adb5bd;
 }
@@ -4441,7 +4441,7 @@ fieldset:disabled .btn {
 .nav-pills {
     --bs-nav-pills-border-radius: var(--bs-border-radius);
     --bs-nav-pills-link-active-color: #fff;
-    --bs-nav-pills-link-active-bg: #5197F7;
+    --bs-nav-pills-link-active-bg: #005BBC;
 }
 
 .nav-pills .nav-link {
@@ -5418,8 +5418,8 @@ fieldset:disabled .btn {
     --bs-pagination-focus-bg: var(--bs-secondary-bg);
     --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
     --bs-pagination-active-color: #fff;
-    --bs-pagination-active-bg: #5197F7;
-    --bs-pagination-active-border-color: #5197F7;
+    --bs-pagination-active-bg: #005BBC;
+    --bs-pagination-active-border-color: #005BBC;
     --bs-pagination-disabled-color: var(--bs-secondary-color);
     --bs-pagination-disabled-bg: var(--bs-secondary-bg);
     --bs-pagination-disabled-border-color: var(--bs-border-color);
@@ -5644,7 +5644,7 @@ fieldset:disabled .btn {
     --bs-progress-border-radius: var(--bs-border-radius);
     --bs-progress-box-shadow: var(--bs-box-shadow-inset);
     --bs-progress-bar-color: #fff;
-    --bs-progress-bar-bg: #5197F7;
+    --bs-progress-bar-bg: #005BBC;
     --bs-progress-bar-transition: width 0.6s ease;
     display: flex;
     height: var(--bs-progress-height);
@@ -5718,8 +5718,8 @@ fieldset:disabled .btn {
     --bs-list-group-disabled-color: var(--bs-secondary-color);
     --bs-list-group-disabled-bg: var(--bs-body-bg);
     --bs-list-group-active-color: #fff;
-    --bs-list-group-active-bg: #5197F7;
-    --bs-list-group-active-border-color: #5197F7;
+    --bs-list-group-active-bg: #005BBC;
+    --bs-list-group-active-border-color: #005BBC;
     display: flex;
     flex-direction: column;
     padding-left: 0;
