--- a/public/Css/perfil.css
+++ b/public/Css/perfil.css
@@ -7,38 +7,24 @@
     --c3: #999999;
 
     --_g: 0 120deg, #0000 0;
-    background: conic-gradient(
-            from 0deg at calc(500% / 6) calc(100% / 3),
-            var(--c3) var(--_g)
-        ),
-        conic-gradient(
-            from -120deg at calc(100% / 6) calc(100% / 3),
-            var(--c2) var(--_g)
-        ),
-        conic-gradient(
-            from 120deg at calc(100% / 3) calc(500% / 6),
-            var(--c1) var(--_g)
-        ),
-        conic-gradient(
-            from 120deg at calc(200% / 3) calc(500% / 6),
-            var(--c1) var(--_g)
-        ),
-        conic-gradient(
-            from -180deg at calc(100% / 3) 50%,
+    background: conic-gradient(from 0deg at calc(500% / 6) calc(100% / 3),
+            var(--c3) var(--_g)),
+        conic-gradient(from -120deg at calc(100% / 6) calc(100% / 3),
+            var(--c2) var(--_g)),
+        conic-gradient(from 120deg at calc(100% / 3) calc(500% / 6),
+            var(--c1) var(--_g)),
+        conic-gradient(from 120deg at calc(200% / 3) calc(500% / 6),
+            var(--c1) var(--_g)),
+        conic-gradient(from -180deg at calc(100% / 3) 50%,
             var(--c2) 60deg,
-            var(--c1) var(--_g)
-        ),
-        conic-gradient(
-            from 60deg at calc(200% / 3) 50%,
+            var(--c1) var(--_g)),
+        conic-gradient(from 60deg at calc(200% / 3) 50%,
             var(--c1) 60deg,
-            var(--c3) var(--_g)
-        ),
-        conic-gradient(
-            from -60deg at 50% calc(100% / 3),
+            var(--c3) var(--_g)),
+        conic-gradient(from -60deg at 50% calc(100% / 3),
             var(--c1) 120deg,
             var(--c2) 0 240deg,
-            var(--c3) 0
-        );
+            var(--c3) 0);
     background-size: calc(var(--s) * 1.732) var(--s);
 }
 
@@ -46,18 +32,16 @@
     position: absolute;
     width: 114px;
     height: 114px;
-    background: #211c6a;
+    background: #005BBC;
     color: white;
     border-radius: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    top: 60%; /* Coloca el avatar en el centro vertical */
-    left: 50%; /* Coloca el avatar en el centro horizontal */
-    transform: translate(
-        -50%,
-        -50%
-    ); /* Centra el avatar respecto al punto medio de la tarjeta */
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%,
+            -50%);
 }
 
 .card__avatar svg {
